--- a/src/main/resources/templates/allSongs.html
+++ b/src/main/resources/templates/allSongs.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 >
 <head th:replace="~{fragments/head :: head (${title})}"></head>
+<script defer th:src="@{/js/bundle-song.js}"></script>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <section>
@@ -11,36 +12,13 @@
     <table class='table table-bordered table-condensed table-striped table-hover' id="all-songs-table">
         <thead class="table-header">
         <th>songTitle</th>
-        <!--            <th >artistName</th>-->
-        <!--            <th >albumName</th>-->
         <th>officialTrackNumber</th>
         <th>durationMS</th>
         <th>explicit</th>
-        <!--            <th >featuredArtists</th>-->
         </thead>
         <tbody id="all-songs-table-body">
         </tbody>
     </table>
-    <div class="pagination">
-
-        <div class="page-viewer__button button" id="first-page-button">
-            <a class="page-viewer__button__link">First</a>
-        </div>
-        <div class="page-viewer__button button" id="previous-page-button">
-            <a class="page-viewer__button__link">Previous</a>
-        </div>
-        <!--            current page viewer div-->
-        <div class="page-viewer__button button">
-            <span class="page-viewer__button__link" id="current-page-view"></span>
-        </div>
-        <div class="page-viewer__button button" id="next-page-button">
-            <a class="page-viewer__button__link">Next</a>
-        </div>
-
-        <div class="page-viewer__button button" id="last-page-button">
-            <a class="page-viewer__button__link">Last</a>
-        </div>
-    </div>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
 </body>
