--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,18 +1,11 @@
-
 <head th:fragment="head (title)">
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="_csrf" th:content="${_csrf.token}"/>
-  <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-  <title th:text="${title}"></title>
-  <script
-          defer
-          th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"
-  ></script>
-  <link rel="stylesheet" th:href="@{/css/global.css}">
-  <link
-          rel="stylesheet"
-          th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
-  />
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <title th:text="${title}"></title>
+    <link rel="stylesheet" th:href="@{/css/bundle-site.css}">
+    <script defer th:src="@{/js/bundle-site.js}" type="module"></script>
+    <link rel="stylesheet" th:href="@{/css/bundle-global.css}">
 </head>
