--- a/src/main/resources/templates/fullAlbum.html
+++ b/src/main/resources/templates/fullAlbum.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head (${title})}"></head>
+<script defer th:src="@{/js/fullPages/bundle-fullAlbum.js}"></script>
+<script defer th:src="@{/js/forms/bundle-addSong.js}"></script>
 <body class="pb-5" id="full">
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
-<script defer th:src="@{/js/fullAlbum.js}"></script>
-<script defer th:src="@{/js/forms/addSong.js}"></script>
 <section>
     <table class='table table-bordered table-condensed table-striped table-hover' id="albums-artist-table">
         <thead class="table-header">
