--- a/src/main/resources/templates/allSongs.html
+++ b/src/main/resources/templates/allSongs.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 >
 <head th:replace="~{fragments/head :: head (${title})}"></head>
-<script defer th:src="@{/js/bundle-song.js}"></script>
+<script defer th:src="@{/js/bundle-song.js}" type="module"></script>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <section>
