--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -5,7 +5,6 @@
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title th:text="${title}"></title>
-    <link rel="stylesheet" th:href="@{/css/bundle-site.css}">
+    <link rel="stylesheet" th:href="@{/css/bundle-site.css}" type="text/css">
     <script defer th:src="@{/js/bundle-site.js}" type="module"></script>
-    <link rel="stylesheet" th:href="@{/css/bundle-global.css}">
 </head>
