--- a/src/main/resources/templates/allAlbums.html
+++ b/src/main/resources/templates/allAlbums.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head (${title})}"></head>
-<script defer th:src="@{js/allPages/bundle-album.js}" type="module"></script>
+<script defer th:src="@{js/bundle-album.js}" type="module"></script>
 <body id="all-albums">
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <section>
