--- a/src/main/resources/templates/fullArtist.html
+++ b/src/main/resources/templates/fullArtist.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 >
 <head th:replace="~{fragments/head :: head (${title})}"></head>
-<script defer th:src="@{/js/fullPages/bundle-fullArtist.js}"></script>
-<script defer th:src="@{/js/forms/bundle-addAlbum.js}"></script>
+<script defer th:src="@{/js/bundle-fullArtist.js}" type="module"></script>
+<script defer th:src="@{/js/bundle-addAlbum.js}" type="module"></script>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <section>
