bug fixes. stopped using .then used asyc/await.

--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -79,7 +79,8 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5 text-center" id="add-user-modal-label">Add User</h1>
-                    <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
+                    <button aria-label="Close" class="btn-close modal-close-btn" data-bs-dismiss="modal"
+                            type="button"></button>
                 </div>
                 <div class="modal-body">
                     <form id="add-user-modal-form">
