--- a/src/main/resources/templates/allSongs.html
+++ b/src/main/resources/templates/allSongs.html
@@ -8,6 +8,18 @@
     <div class="table-caption">
         <h1>All Songs</h1>
     </div>
+    <div class="row w-100 height d-flex justify-content-center align-items-center">
+        <div class="col-md-6">
+            <div class="form">
+                <i class="fa fa-search"></i>
+                <input class="form-control form-input" id="search-bar" placeholder="Search anything..." type="text">
+                <span class="left-pan"><i class="fa fa-microphone"></i></span>
+            </div>
+        </div>
+    </div>
+    <div class="alert alert-danger" id="songs-error" role="alert">
+        There are no songs
+    </div>
     <table class='table table-bordered table-condensed table-striped table-hover' id="all-songs-table">
         <thead class="table-header">
         <th>songTitle</th>
